@@ -8,7 +8,8 @@ Standards-Version: 3.9.2
 Package: zentyal-openchange
 Architecture: all
 Depends: zentyal-core (>= 3.5), zentyal-core (<< 4.0),
-         zentyal-samba (>= 3.5.3), zentyal-mail, zentyal-webserver,
+         zentyal-network (>= 3.5.2), zentyal-samba (>= 3.5.3),
+         zentyal-mail, zentyal-webserver,
          openchangeserver (>= 3:2.0-2~20140606-1~96),
          openchange-rpcproxy, libstring-random-perl,
          openchange-ocsmanager (>> 3:2.0-2~20140606-1~98),
