@@ -502,12 +502,13 @@ sub _setOCSManagerConf
         $adminMail = 'postmaster@' . $domain;
     }
     my $confFileParams = [
-        bindDn      => $self->_kerberosServiceAccountDN(),
-        bindPwd     => $self->_kerberosServiceAccountPassword(),
-        baseDn      => 'CN=Users,' . $users->ldap()->dn(),
-        port        => 389,
-        adminMail   => $adminMail,
-        rpcProxySSL => ($self->_rpcProxyEnabled() and $self->model('RPCProxy')->httpsEnabled()),
+        bindDn       => $self->_kerberosServiceAccountDN(),
+        bindPwd      => $self->_kerberosServiceAccountPassword(),
+        baseDn       => 'CN=Users,' . $users->ldap()->dn(),
+        port         => 389,
+        adminMail    => $adminMail,
+        rpcProxy     => $self->_rpcProxyEnabled(),
+        rpcProxySSL  => ($self->_rpcProxyEnabled() and $self->model('RPCProxy')->httpsEnabled()),
         mailboxesDir =>  EBox::Mail::VDOMAINS_MAILBOXES_DIR(),
     ];
     if ($self->_rpcProxyEnabled()) {
@@ -518,6 +519,8 @@ sub _setOCSManagerConf
         } catch ($ex) {
             EBox::error("Error getting hostname for RPC proxy: $ex");
         }
+        my $network = $global->modInstance('network');
+        push(@{$confFileParams}, intNetworks => $network->internalNetworks());
     }
 
     $self->writeConfFile(OCSMANAGER_CONF_FILE,
