@@ -4,6 +4,8 @@ $bindPwd
 $baseDn
 $port
 $adminMail
+$intNetworks => ['0.0.0.0/0']
+$rpcProxy
 $rpcProxySSL
 $rpcProxyExternalHostname => undef
 $mailboxesDir
@@ -79,7 +81,15 @@ basedn = <% $baseDn %>
 # execute malicious code after an exception is raised.
 #set debug = false
 
+[autodiscover]
+# The client address that is not in these networks. Have RPC/Proxy
+# prioritised. It only works for Outlook 2010 or higher. Delimiter: ,
+# internal_networks = 0.0.0.0/0
+internal_networks = <% join(', ', @{$intNetworks}) %>
+
 [autodiscover:rpcproxy]
+# Enabled RPC/Proxy or not
+enabled = <% $rpcProxy ? 'true' : 'false' %>
 # We assume the autodiscover host and the EWS (Free/Busy) are in the same host
 # external_hostname = hostname
 % if ($rpcProxyExternalHostname) {
